--- a/src/app/layouts/full/full.component.scss
+++ b/src/app/layouts/full/full.component.scss
@@ -5,4 +5,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+
+  #outletContainer {
+    flex: 1 1 auto;
+    width: 100%;
+  }
 }
